// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stack /> should change margin with gap prop 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > * + * {
  margin-top: 30px;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <div
      class="c0"
    >
      Item 1
    </div>
    <div
      class="c0"
      data-testid="second-item"
    >
      Item 2
    </div>
  </div>
</div>
`;

exports[`<Stack /> should render 1`] = `
.c0 {
  box-sizing: border-box;
  min-width: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > * + * {
  margin-top: 10px;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <div
      class="c0"
    >
      Item 1
    </div>
    <div
      class="c0"
    >
      Item 2
    </div>
  </div>
</div>
`;
